# replicate-gnn

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: 01_gcn_cora.ipynb  02_deezer_europe.ipynb  02_gcn_graphsage.ipynb
scripts/: train_gcn.py
src/gnnbench/: __init__.py  cli.py  config.py  data.py  metrics.py  models.py  train.py  utils.py
src/inductive_bench/: __init__.py  data_utils.py  experiment.py  graph_features.py  models.py
