[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnnbench"
version = "0.1.0"
description = "Tiny baseline GCN benchmarking toolkit for node classification (PyG)."
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
  "torch_geometric>=2.5",
  "scikit-learn>=1.3",
  "numpy>=1.23",
  "pandas>=2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["gnnbench"]
