[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnnbench"
version = "0.2.0"
description = "Tiny baseline GCN benchmarking toolkit for node classification (PyG)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
  "torch_geometric>=2.5",
  "scikit-learn>=1.3",
  "numpy>=1.23",
  "pandas>=2.0"
]

[project.scripts]
gnnbench-train = "gnnbench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gnnbench*"]
